@@ -135,6 +135,10 @@ class DatabaseInterface(object):
         '''
         raise NotImplementedError
 
+    def lock_id(self, id, timeout=None):
+        """Return SQL function to lock resource"""
+        raise NotImplementedError
+
     def has_constraint(self, constraint):
         '''
         Return True if database handle constraint.
@@ -214,6 +218,10 @@ class DatabaseInterface(object):
         if not self.has_sequence():
             return
         raise NotImplementedError
+
+    def has_channel(self):
+        "Return True if database supports LISTEN/NOTIFY channel"
+        return False
 
     def sql_type(self, type_):
         'Return the SQLType tuple corresponding to the SQL type'
