@@ -1,3 +1,4 @@
+* Add transactional queue and workers
 * Add __table_handler__ to ModelSQL
 * Support partial index
 * Allow to use SQL expression for index action
